@@ -1314,17 +1314,17 @@ static GtkWidget *create_programs_tab (GtkWidget *parent)
     label = create_label (parent, _("Terminal:"));
     table_add (table, label, 0, 4, GTK_FILL);
 
-    entry = create_entry (parent, "viewer", gnome_cmd_data_get_viewer());
+    entry = create_entry (parent, "viewer", gnome_cmd_data.get_viewer());
     table_add (table, entry, 1, 0, (GtkAttachOptions) (GTK_EXPAND|GTK_FILL));
 
     check = create_check (parent, _("Use Internal Viewer"), "use_internal_viewer");
     gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (check), gnome_cmd_data.use_internal_viewer);
     table_add (table, check, 1, 1, (GtkAttachOptions) (GTK_EXPAND|GTK_FILL));
-    entry = create_entry (parent, "editor", gnome_cmd_data_get_editor());
+    entry = create_entry (parent, "editor", gnome_cmd_data.get_editor());
     table_add (table, entry, 1, 2, (GtkAttachOptions) (GTK_EXPAND|GTK_FILL));
-    entry = create_entry (parent, "differ", gnome_cmd_data_get_differ());
+    entry = create_entry (parent, "differ", gnome_cmd_data.get_differ());
     table_add (table, entry, 1, 3, (GtkAttachOptions) (GTK_EXPAND|GTK_FILL));
-    entry = create_entry (parent, "term", gnome_cmd_data_get_term());
+    entry = create_entry (parent, "term", gnome_cmd_data.get_term());
     table_add (table, entry, 1, 4, (GtkAttachOptions) (GTK_EXPAND|GTK_FILL));
 
 
@@ -1386,10 +1386,10 @@ inline void store_programs_options (GnomeCmdOptionsDialog *dialog)
     GtkWidget *check_uris = lookup_widget (GTK_WIDGET (dialog), "honor_expect_uris");
     GtkWidget *check_iv = lookup_widget (GTK_WIDGET (dialog), "use_internal_viewer");
 
-    gnome_cmd_data_set_viewer (gtk_entry_get_text (GTK_ENTRY (entry1)));
-    gnome_cmd_data_set_editor (gtk_entry_get_text (GTK_ENTRY (entry2)));
-    gnome_cmd_data_set_differ (gtk_entry_get_text (GTK_ENTRY (entry3)));
-    gnome_cmd_data_set_term (gtk_entry_get_text (GTK_ENTRY (entry5)));
+    gnome_cmd_data.set_viewer(gtk_entry_get_text (GTK_ENTRY (entry1)));
+    gnome_cmd_data.set_editor(gtk_entry_get_text (GTK_ENTRY (entry2)));
+    gnome_cmd_data.set_differ(gtk_entry_get_text (GTK_ENTRY (entry3)));
+    gnome_cmd_data.set_term(gtk_entry_get_text (GTK_ENTRY (entry5)));
 
     gnome_cmd_data.honor_expect_uris = !gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (check_uris));
     gnome_cmd_data.use_internal_viewer = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (check_iv));
